[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"
default-run = 'payment-engine'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = 'src/lib.rs'

[[bin]]
name = "payment-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
csv = { path = "csv-1.1.6" }
serde = { version = "1.0.133", features = ["derive"] }
memchr = "2.4.1"
rand = "0.8.4"
bstr = "0.2.17"

[profile.release]
opt-level = 3
lto = "fat"
